src/_build/_log
### Starting build.
# Target: checktypes.ml.depends, tags: { package(ANSITerminal), package(oUnit), package(yojson), extension:ml, file:checktypes.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -package ANSITerminal -modules checktypes.ml > checktypes.ml.depends
# Target: authors.mli.depends, tags: { package(ANSITerminal), package(oUnit), package(yojson), extension:mli, file:authors.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -package ANSITerminal -modules authors.mli > authors.mli.depends # cached
# Target: authors.cmi, tags: { package(ANSITerminal), package(oUnit), package(yojson), byte, compile, extension:mli, file:authors.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -package ANSITerminal -o authors.cmi authors.mli # cached
# Target: setup.mli.depends, tags: { package(ANSITerminal), package(oUnit), package(yojson), extension:mli, file:setup.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -package oUnit -package yojson -package ANSITerminal -modules setup.mli > setup.mli.depends # cached
# Target: setup.cmi, tags: { package(ANSITerminal), package(oUnit), package(yojson), byte, compile, extension:mli, file:setup.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -package ANSITerminal -o setup.cmi setup.mli # cached
# Target: checktypes.cmo, tags: { package(ANSITerminal), package(oUnit), package(yojson), byte, compile, extension:cmo, extension:ml, file:checktypes.cmo, file:checktypes.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -package oUnit -package yojson -package ANSITerminal -o checktypes.cmo checktypes.ml
+ ocamlfind ocamlc -c -package oUnit -package yojson -package ANSITerminal -o checktypes.cmo checktypes.ml
File "checktypes.ml", line 14, characters 41-51:
14 | module PrefixTreeCheck : PrefixTreeSig = PrefixTree
                                              ^^^^^^^^^^
Error: Unbound module PrefixTree
Command exited with code 2.
# Compilation unsuccessful.
